Fixed case of addContact not clearing. Fixed overflowing address problem for contact information.

--- a/html/home.css
+++ b/html/home.css
@@ -127,6 +127,11 @@ body{
     margin-bottom: 0px;
 }
 
+#addressView {
+  resize: none;
+  overflow:hidden;
+}
+
 .btn {
     padding: 10px 20px;
     border: 0 none;
